--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "cd client && npm install && npm run build",
+    "build": "vite build",
     "start": "node dist/index.js"
   },
   "dependencies": {
