--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     "vaul": "^0.8.0",
     "wouter": "^2.12.1",
     "ws": "^8.16.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "recharts": "^2.12.0",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@replit/vite-plugin-runtime-error-modal": "^1.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
