--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
     "class-variance-authority": "^0.7.0",
@@ -55,14 +56,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-resizable-panels": "^1.0.9",
+    "recharts": "^2.12.0",
     "tailwind-merge": "^2.2.1",
     "vaul": "^0.8.0",
     "wouter": "^2.12.1",
     "ws": "^8.16.0",
-    "zod": "^3.22.4",
-    "recharts": "^2.12.0",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "@replit/vite-plugin-runtime-error-modal": "^1.0.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
