--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "buildCommand": "npm install --include=dev && npm run build",
-  "outputDirectory": "dist",
+  "outputDirectory": "dist/client",
   "framework": "vite",
   "rewrites": [
     {
@@ -10,7 +10,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/"
+      "destination": "/index.html"
     }
   ]
 } 
