--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.0",
-    "@vercel/node": "^3.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -38,10 +37,11 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/react-toggle-group": "^1.0.4",
-    "@supabase/supabase-js": "^2.39.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/supabase-js": "^2.50.3",
     "@tanstack/react-query": "^5.17.19",
+    "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
@@ -64,14 +64,14 @@
     "vaul": "^0.8.0",
     "wouter": "^2.12.1",
     "ws": "^8.16.0",
-    "zod": "^3.22.4",
-    "bufferutil": "^4.0.8"
+    "zod": "^3.25.71"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/ws": "^8.5.10",
+    "@vercel/node": "^5.3.2",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
