--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hook-form": "^7.49.3",
     "react-resizable-panels": "^1.0.9",
     "recharts": "^2.12.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^2.2.1",
     "vaul": "^0.8.0",
     "wouter": "^2.12.1",
