--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.0.0-rc19",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "framer-motion": "^12.23.0",
     "input-otp": "^1.0.1",
     "lucide-react": "^0.316.0",
     "nanoid": "^5.0.4",
