--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/supabase-js": "^2.50.3",
     "@tanstack/react-query": "^5.17.19",
+    "@types/xlsx": "^0.0.35",
     "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -63,6 +64,7 @@
     "vaul": "^0.8.0",
     "wouter": "^2.12.1",
     "ws": "^8.16.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.71"
   },
   "devDependencies": {
