--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-resizable-panels": "^1.0.9",
+    "react-router-dom": "^7.6.3",
     "recharts": "^2.12.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^2.2.1",
