--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@vercel/node": "^5.3.2",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
+    "drizzle-kit": "^0.31.4",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
