--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/supabase-js": "^2.50.3",
     "@tanstack/react-query": "^5.17.19",
+    "@types/exceljs": "^0.5.3",
     "@types/xlsx": "^0.0.35",
     "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
